feat: add recipes json
