# swagger-output.json
@@ -2,15 +2,15 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
+    "title": "Cookbook API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:3000",
   "basePath": "/",
   "tags": [
     {
-      "name": "User",
-      "description": "Endpoints"
+      "name": "Auth",
+      "description": "Authentications"
     }
   ],
   "schemes": [
@@ -32,9 +32,33 @@
     "application/json"
   ],
   "paths": {
+    "/v1/auth/logout/{token}": {
+      "delete": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "Delete user session",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/v1/auth/register": {
       "post": {
-        "description": "",
+        "tags": [
+          "Auth"
+        ],
+        "description": "Create a new user",
         "parameters": [
           {
             "name": "body",
@@ -64,7 +88,10 @@
     },
     "/v1/auth/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "Auth"
+        ],
+        "description": "Create new session",
         "parameters": [
           {
             "name": "body",
